--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
     <li><a href="./public/hobbies.html">Hobbies</a></li>
     <li><a href="./public/contact.html">Contact Me</a></li>
    </ul>
-   
-   <p>© Boris Pak. All rights reserved.</p>
+   <footer>
+       <p>© Boris Pak. All rights reserved.</p>
+   </footer>
 </body>
 </html>
